# lighthouse-storage

./: .gitignore  Cargo.toml  README.md
server/: README.md
server/go/: README.md  main.go
server/go_fileserver/: .gitignore  fileserver.go
server/rust/: content_server.rs
src/: main.rs  metadata.rs  post_data.rs  sectors.rs  storage_config.rs
src/consensus/: eth_spec.rs  mod.rs  nephele_spec.rs  slot_epoch.rs  slot_epoch_macros.rs
src/janitor/: mod.rs  watchdog.rs
