[package]
name = "storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0"
cid = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
filecoin-proofs = "14.0.0"
forest_cid = "0.3.0"
filecoin-proofs-api = "14.0.0"
rand = "0.8.5"
fr32 = "7.0.0"
storage-proofs-core = "14.0.0"
anyhow = "1.0.70"
notify = "6.0.1"
futures = "0.3.28"
