[package]
name = "storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0"
cid = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
filecoin-proofs = "14.0.0"
forest_cid = "0.3.0"
filecoin-proofs-api = "14.0.0"
rand = "0.8.5"
fr32 = "7.0.0"
storage-proofs-core = "14.0.0"
anyhow = "1.0.70"
notify = "6.0.1"
futures = "0.3.28"
ethereum-types = "0.14.1"
serde_derive = "1.0.171"
ssz_types = "0.5.4"
safe_arith = {path = "src/consensus/safe_arith"}
int_to_bytes = { path = "src/consensus/int_to_bytes" }
arbitrary = { version = "1.3.0", features = ["derive"] }
serde_utils = "0.6.2"
ethereum_serde_utils = "0.5.1"
serde_yaml = "0.9.22"
tree_hash = { version = "0.5.2", features = ["arbitrary"] }
ethereum_ssz = "0.5.3"
fmt = "0.1.0"
slog = "2.7.0"
